--- a/src/css/base/_typography.sass
+++ b/src/css/base/_typography.sass
@@ -336,3 +336,11 @@ ol.big
       margin-right: 24px
       min-width: 66px
       width: 66px
+
+hr
+  border: none
+  color: $text-color
+  background-color: $text-color
+  height: 1px
+  margin-top: 20px
+  margin-bottom: 20px
