--- a/src/css/project/_alphabeth.sass
+++ b/src/css/project/_alphabeth.sass
@@ -1,8 +1,17 @@
 .alphabeth-block
+  align-items: center
+  display: flex
   text-align: center
 
   &:not(:last-child)
     margin-bottom: 56px
+
+  &__letter
+    color: rgba($text-color, 0.5)
+    font-weight: 700
+    font-size: 96px
+    margin-right: 20px
+    line-height: 1
 
 .alphabeth
   background-color: $green_light
