--- a/src/css/style.sass
+++ b/src/css/style.sass
@@ -62,6 +62,8 @@
 
 @import "project/_more-block.sass"
 
+@import "project/_dropmenu.sass"
+
 @import "project/_footer.sass"
 
 @import "project/_alt-footer.sass"
