--- a/src/css/project/_analysis-detail.sass
+++ b/src/css/project/_analysis-detail.sass
@@ -5,14 +5,14 @@
     @media(min-width: 1350px)
       margin-bottom: 96px
 
-  @media(min-width: 1024px)
+  @media(min-width: 1350px)
     display: flex
     flex-direction: row-reverse
     margin-left: -10px
     margin-right: -10px
 
   &__left
-    @media(min-width: 1024px)
+    @media(min-width: 1350px)
       padding-left: 10px
       padding-right: 10px
       width: 63%
@@ -20,7 +20,7 @@
   &__right
     margin-bottom: 24px
 
-    @media(min-width: 1024px)
+    @media(min-width: 1350px)
       margin-bottom: 0
       padding-left: 10px
       padding-right: 10px
@@ -30,12 +30,10 @@
     background-color: #fff
     border-radius: $border-radius
     border: 1px solid $purple_light
-    padding: 24px 12px
+    padding: 16px
 
     @media(min-width: 1024px)
       position: sticky
-      padding-left: 24px
-      padding-right: 24px
       top: 0
 
   &__artikul-bar
@@ -83,19 +81,44 @@
 
   &__info
     display: flex
+    font-size: 12px
     font-weight: 700
     margin-left: -10px
     margin-right: -10px
     margin-bottom: 32px
 
   &__info-block
+    align-items: center
+    display: flex
     padding-left: 10px
     padding-right: 10px
     width: 50%
 
+    &--time
+      &::before
+        background-image: url("data:image/svg+xml,%3Csvg width='20' height='20' viewBox='0 0 20 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M9.99 0C4.47 0 0 4.48 0 10C0 15.52 4.47 20 9.99 20C15.52 20 20 15.52 20 10C20 4.48 15.52 0 9.99 0ZM10 18C5.58 18 2 14.42 2 10C2 5.58 5.58 2 10 2C14.42 2 18 5.58 18 10C18 14.42 14.42 18 10 18Z' fill='%23023047'/%3E%3Cpath d='M10.5 5H9V11L14.25 14.15L15 12.92L10.5 10.25V5Z' fill='%23023047'/%3E%3C/svg%3E%0A")
+        content: ''
+        display: block
+        height: 20px
+        margin-right: 10px
+        min-width: 20px
+        width: 20px
+
+    &--material
+      &::before
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Cpath fill='%23023047' d='M469.2,403.5L352,215V48h20c6.6,0,12-5.4,12-12V12c0-6.6-5.4-12-12-12H140c-6.6,0-12,5.4-12,12v24c0,6.6,5.4,12,12,12h20v167L42.8,403.5C13.5,450.6,47.3,512,102.9,512h306.2C464.8,512,498.5,450.5,469.2,403.5z M409.1,464H102.9c-18.1,0-28.7-20.1-19.3-35.2l117.2-188.5c4.7-7.6,7.2-16.4,7.2-25.3V48h96v167c0,9,2.5,17.7,7.2,25.3l117.2,188.5C437.8,443.9,427.3,464,409.1,464L409.1,464z'/%3E%3C/svg%3E%0A")
+        background-size: 20px 20px
+        content: ''
+        display: block
+        height: 20px
+        margin-right: 10px
+        min-width: 20px
+        width: 20px
+
   &__buy-block
     align-items: center
     display: flex
+    flex-wrap: wrap
 
     .button
       min-width: 130px
@@ -113,9 +136,9 @@
     white-space: nowrap
 
     @media(min-width: 768px)
-      font-size: 36px
+      font-size: 30px
 
-    @media(min-width: 1350px)
+    @media(min-width: 1600px)
       font-size: 48px
 
   &__add-price
