--- a/src/css/project/_map-block.sass
+++ b/src/css/project/_map-block.sass
@@ -265,7 +265,6 @@ ymaps
   &__phone
     font-weight: 700
     margin-bottom: 5px
-
     a
       align-items: center
       color: $text-color
@@ -276,9 +275,13 @@ ymaps
       &:focus
         color: $green
 
+      &:first-child
+        &::before
+          background-image: url("data:image/svg+xml,%3Csvg width='18' height='18' viewBox='0 0 18 18' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M3.62 7.79C5.06 10.62 7.38 12.93 10.21 14.38L12.41 12.18C12.68 11.91 13.08 11.82 13.43 11.94C14.55 12.31 15.76 12.51 17 12.51C17.55 12.51 18 12.96 18 13.51V17C18 17.55 17.55 18 17 18C7.61 18 0 10.39 0 1C0 0.45 0.45 0 1 0H4.5C5.05 0 5.5 0.45 5.5 1C5.5 2.25 5.7 3.45 6.07 4.57C6.18 4.92 6.1 5.31 5.82 5.59L3.62 7.79Z' fill='%23023047'/%3E%3C/svg%3E%0A")
+
       &::before
-        background-image: url("data:image/svg+xml,%3Csvg width='18' height='18' viewBox='0 0 18 18' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M3.62 7.79C5.06 10.62 7.38 12.93 10.21 14.38L12.41 12.18C12.68 11.91 13.08 11.82 13.43 11.94C14.55 12.31 15.76 12.51 17 12.51C17.55 12.51 18 12.96 18 13.51V17C18 17.55 17.55 18 17 18C7.61 18 0 10.39 0 1C0 0.45 0.45 0 1 0H4.5C5.05 0 5.5 0.45 5.5 1C5.5 2.25 5.7 3.45 6.07 4.57C6.18 4.92 6.1 5.31 5.82 5.59L3.62 7.79Z' fill='%23023047'/%3E%3C/svg%3E%0A")
         content: ''
+        display: block
         height: 18px
         margin-right: 10px
         width: 18px
@@ -290,6 +293,7 @@ ymaps
     margin-bottom: 5px
 
     &::before
+      align-self: baseline
       background-image: url("data:image/svg+xml,%3Csvg width='20' height='20' viewBox='0 0 20 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M9.99 0C4.47 0 0 4.48 0 10C0 15.52 4.47 20 9.99 20C15.52 20 20 15.52 20 10C20 4.48 15.52 0 9.99 0ZM10 18C5.58 18 2 14.42 2 10C2 5.58 5.58 2 10 2C14.42 2 18 5.58 18 10C18 14.42 14.42 18 10 18Z' fill='%23023047'/%3E%3Cpath d='M10.5 5H9V11L14.25 14.15L15 12.92L10.5 10.25V5Z' fill='%23023047'/%3E%3C/svg%3E%0A")
       content: ''
       height: 20px
@@ -330,6 +334,7 @@ ymaps
       width: 6px
 
     &.slick-initialized
+      display: block
       padding-left: 32px
       padding-right: 32px
 
@@ -337,7 +342,7 @@ ymaps
       .balloon__image
         &:not(:last-child)
           margin-right: 10px
-          width: 100px
+          width: 80px
 
       img
         width: 70px
@@ -348,9 +353,14 @@ ymaps
       margin-right: auto
       max-width: 70px
 
+    .slick-track
+      margin-left: 0
+      margin-right: 0
+
     .slick-slide
       padding-left: 5px
       padding-right: 5px
+      width: 80px
 
     .slick-prev,
     .slick-next
@@ -372,3 +382,7 @@ ymaps
     .slick-next
       left: auto
       right: 0
+
+  &__image
+    padding-left: 5px
+    padding-right: 5px
