--- a/src/css/project/_tabs.sass
+++ b/src/css/project/_tabs.sass
@@ -14,6 +14,8 @@
     padding: 8px
     position: sticky
     top: 0
+    z-index: 1
+    
     scrollbar-width: thin
     scrollbar-color: $purple $purple_light
 
