clinic page + doctor page

--- a/src/css/base/_buttons.sass
+++ b/src/css/base/_buttons.sass
@@ -62,7 +62,7 @@
     font-size: 16px
     height: 40px
     line-height: 1.25
-    padding: 8px
+    padding: 8px 16px
 
     .icon
       height: 20px
@@ -73,7 +73,7 @@
     font-size: 16px
     height: 48px
     line-height: 1.25
-    padding: 14px
+    padding: 14px 16px
 
     .icon
       height: 20px
