--- a/src/css/style.sass
+++ b/src/css/style.sass
@@ -148,3 +148,7 @@
 @import "project/_get-result.sass"
 
 @import "project/_features.sass"
+
+@import "project/_clinic-intro.sass"
+
+@import "project/_simple-slider.sass"
