--- a/src/css/project/_news.sass
+++ b/src/css/project/_news.sass
@@ -26,6 +26,13 @@
         padding-left: 12px
         padding-right: 12px
 
+  &.js-news-slider
+    &:not(:last-child)
+      margin-bottom: 56px
+
+      @media(min-width: 1350px)
+        margin-bottom: 96px
+
   .slick-track
     display: flex
     margin: 0
