--- a/src/css/project/_analyzes.sass
+++ b/src/css/project/_analyzes.sass
@@ -52,7 +52,7 @@
     margin-bottom: 0
 
     @media(min-width: 1350px)
-      font-size: 24px
+      font-size: 22px
 
   &__time
     font-weight: 700
@@ -132,10 +132,11 @@
     margin-bottom: 0
     margin-right: auto
     padding-right: 8px
+    white-space: nowrap
 
     @media(min-width: 768px)
       font-size: 36px
       margin-right: 24px
 
     @media(min-width: 1350px)
-      font-size: 48px
+      font-size: 44px
