--- a/src/css/project/_doctor-detail.sass
+++ b/src/css/project/_doctor-detail.sass
@@ -3,6 +3,12 @@
     align-items: flex-start
     display: flex
 
+  &:not(:last-child)
+    margin-bottom: 56px
+
+    @media(min-width: 1350px)
+      margin-bottom: 96px
+
   &__image
     margin-bottom: 24px
 
