--- a/src/css/project/_dropmenu.sass
+++ b/src/css/project/_dropmenu.sass
@@ -64,7 +64,7 @@
     background-color: transparent
     cursor: pointer
     display: flex
-    height: 60px
+    height: 100%
     justify-content: center
     left: auto
     padding: 0
