--- a/src/css/project/_issues-list.sass
+++ b/src/css/project/_issues-list.sass
@@ -59,9 +59,6 @@
     .button
       min-width: 130px
 
-      @media(min-width: 768px)
-        margin-left: 32px
-
       &::after
         bottom: 0
         content: ''
@@ -77,3 +74,4 @@
     @media(min-width: 768px)
       max-width: 720px
       margin-bottom: 0
+      margin-right: 32px
