--- a/src/css/project/_alphabeth.sass
+++ b/src/css/project/_alphabeth.sass
@@ -47,19 +47,25 @@
         width: 56px
 
   &__button
+    align-items: center
     background-color: transparent
     border: none
     border-radius: $border-radius
+    color: $text-color
     cursor: pointer
+    display: flex
     font-weight: 700
     height: 40px
+    justify-content: center
     padding: 0
+    text-decoration: none
     transition: background-color 0.3s
     width: 40px
 
     &:hover,
     &:focus
       background-color: rgba(#fff, 0.7)
+      color: $text-color
 
     &.is-active
       background-color: #fff
