--- a/src/css/project/_analyzes.sass
+++ b/src/css/project/_analyzes.sass
@@ -44,18 +44,20 @@
     margin-bottom: 24px
 
   &__title
-    font-size: 18px
-    font-weight: 800
+    font-size: 16px
     line-height: 1.2
     padding-right: 16px
     margin-right: auto
     margin-bottom: 0
 
     @media(min-width: 1350px)
-      font-size: 22px
+      font-size: 18px
 
   &__time
     font-weight: 700
+
+    @media(min-width: 1350px)
+      font-size: 18px
 
   &__bottom
     @media(min-width: 768px)
@@ -67,7 +69,7 @@
 
   &__subtitle
     font-size: 18px
-    font-weight: 700
+    font-weight: 800
     line-height: 1.2
     margin-right: auto
     margin-bottom: 16px
