--- a/src/css/style.sass
+++ b/src/css/style.sass
@@ -152,3 +152,9 @@
 @import "project/_clinic-intro.sass"
 
 @import "project/_simple-slider.sass"
+
+@import "project/_insurance.sass"
+
+@import "project/_history.sass"
+
+@import "project/_management.sass"
