--- a/src/css/base/_typography.sass
+++ b/src/css/base/_typography.sass
@@ -347,3 +347,14 @@ hr
 
 .mb0
   margin-bottom: 0
+
+.incut
+  border-radius: $border-radius
+  background-color: $green_light
+  margin-left: auto
+  margin-right: auto
+  max-width: 850px
+  padding: 32px 16px
+
+  &:not(:last-child)
+    margin-bottom: 40px
