--- a/src/css/project/_dropmenu.sass
+++ b/src/css/project/_dropmenu.sass
@@ -32,6 +32,33 @@
         background-color: $purple
         color: #fff
 
+  &--type_2
+    border-color: $purple
+
+    .dropmenu__link
+      &.is-active
+        background-color: $purple_light
+
+      &:hover,
+      &:focus
+        background-color: $purple_light
+        color: $text-color
+
+    .dropmenu__toggler
+      &:hover,
+      &:focus,
+      &.is-active
+        background-color: $purple_light
+
+    .dropmenu__dropdown-link
+      background-color: $purple_light
+
+      &:hover,
+      &:focus,
+      &.is-active
+        background-color: $purple
+        color: #fff
+
   &__item
 
   &__item-inner
