--- a/src/css/project/_partners.sass
+++ b/src/css/project/_partners.sass
@@ -1,4 +1,4 @@
-.insurance-list
+.partners-list
   display: flex
   flex-wrap: wrap
   margin-left: auto
@@ -21,7 +21,7 @@
       margin-bottom: 40px
       width: 25%
 
-.insurance-link
+.partners-link
   align-items: center
   border-radius: $border-radius
   border: 6px solid $purple_light
