--- a/src/css/style.sass
+++ b/src/css/style.sass
@@ -158,3 +158,7 @@
 @import "project/_history.sass"
 
 @import "project/_management.sass"
+
+@import "project/_gendir.sass"
+
+@import "project/_partners.sass"
