--- a/src/css/project/_slider-block.sass
+++ b/src/css/project/_slider-block.sass
@@ -124,6 +124,10 @@
     @media(min-width: 1350px)
       font-size: 32px
 
+  &__slide-text
+    display: block
+    margin-bottom: 12px
+
   &__slide-button
     align-items: center
     background-color: #fff
