--- a/src/css/project/_search-bar.sass
+++ b/src/css/project/_search-bar.sass
@@ -225,11 +225,13 @@
     align-items: center
     background-color: transparent
     border: none
+    color: $text-color
     cursor: pointer
     display: flex
     transition: background-color 0.3s
     text-align: left
     padding: 12px 16px
+    text-decoration: none
     width: 100%
 
     @media(min-width: 768px)
@@ -239,6 +241,7 @@
     &:hover,
     &:focus
       background-color: $purple_light
+      color: $text-color
 
     .icon
       fill: $text-color
