--- a/src/css/style.sass
+++ b/src/css/style.sass
@@ -72,6 +72,9 @@
 
 @import "project/_geo-popup.sass"
 
+@import "project/_to-top.sass"
+
+
 
 @import "project/_complex.sass"
 
@@ -110,6 +113,8 @@
 @import "project/_consultation.sass"
 
 @import "project/_record-form.sass"
+
+@import "project/_info-popup.sass"
 
 @import "project/_banner.sass"
 
