--- a/src/css/project/_dropmenu.sass
+++ b/src/css/project/_dropmenu.sass
@@ -19,7 +19,6 @@
 
     .dropmenu__toggler
       &:hover,
-      &:focus,
       &.is-active
         background-color: $purple_light
 
@@ -46,7 +45,6 @@
 
     .dropmenu__toggler
       &:hover,
-      &:focus,
       &.is-active
         background-color: $purple_light
 
@@ -63,7 +61,7 @@
 
   &__item-inner
     position: relative
-    padding-right: 40px
+    //padding-right: 40px
 
   &__link
     align-items: center
@@ -71,7 +69,7 @@
     display: flex
     font-weight: 700
     min-height: 60px
-    padding: 8px 24px
+    padding: 8px 48px 8px 24px
     text-decoration: none
     transition: background-color 0.3s, color 0.3s
 
@@ -100,9 +98,9 @@
     top: 0
     transition: background-color 0.3s
     width: 40px
+    z-index: 1
 
     &:hover,
-    &:focus,
     &.is-active
       background-color: $green_light
 
