--- a/src/css/project/_record-form.sass
+++ b/src/css/project/_record-form.sass
@@ -30,3 +30,19 @@
   .button
     min-width: 130px
     margin-top: 24px
+
+.record-popup
+  background-color: #fff
+  border-radius: $border-radius
+  display: none
+  max-width: 600px
+  padding: 24px
+  width: 100%
+
+  &.fancybox-content
+    max-width: 600px
+
+  .record-form
+    .button
+      margin-left: auto
+      margin-right: auto
