new banner-slider + video for main + add review + reviews slider for doctor + fixes

--- a/src/css/base/_layout.sass
+++ b/src/css/base/_layout.sass
@@ -98,6 +98,11 @@ body
       padding-left: 20px
       padding-right: 20px
 
+    &--align_center
+      display: flex
+      flex-direction: column
+      justify-content: center
+
 .menued-list
   @media(min-width: 1024px)
     display: flex
