--- a/src/css/project/_complex.sass
+++ b/src/css/project/_complex.sass
@@ -108,7 +108,7 @@
     margin-bottom: 16px
 
   &__buy-block
-    align-items: center
+    align-items: flex-end
     display: flex
     justify-content: space-between
     margin-top: auto
@@ -117,7 +117,7 @@
       position: relative
       z-index: 2
 
-  &__price
+  &__price-block
     font-size: 18px
     font-weight: 800
     line-height: 1.2
@@ -125,3 +125,13 @@
 
     @media(min-width: 1350px)
       font-size: 24px
+
+  &__price
+    margin-bottom: 0
+
+  &__old-price
+    font-weight: 400
+    font-size: 60%
+    margin-bottom: 0
+    opacity: 0.6
+    text-decoration: line-through
