--- a/src/template/sprite.html
+++ b/src/template/sprite.html
@@ -250,4 +250,14 @@
     <symbol id="chevron_top" viewBox="0 0 24 24">
         <path d="M16.3,15.7l-4.6-4.6l-4.6,4.6l-1.4-1.4l6-6l6,6L16.3,15.7z" />
     </symbol>
+    <symbol id="zen" viewBox="0 0 32 32">
+        <path
+          d="M18.9,18.9c-2.4,2.4-2.5,5.5-2.7,12.1c6.2,0,10.5,0,12.7-2.2C31,26.6,31,22.1,31,16.2C24.4,16.4,21.3,16.5,18.9,18.9 M1,16.2c0,6,0,10.5,2.2,12.7C5.4,31,9.6,31,15.8,31c-0.2-6.6-0.4-9.7-2.7-12.1C10.7,16.5,7.6,16.4,1,16.2 M15.8,1C9.7,1,5.4,1,3.2,3.2C1,5.4,1,9.9,1,15.8c6.6-0.2,9.7-0.4,12.1-2.7C15.5,10.7,15.6,7.6,15.8,1 M18.9,13.1c-2.4-2.4-2.5-5.5-2.7-12.1c6.2,0,10.5,0,12.7,2.2C31,5.4,31,9.9,31,15.8C24.4,15.6,21.3,15.5,18.9,13.1" />
+        <path fill="#fff"
+          d="M31,16.2v-0.3c-6.6-0.2-9.7-0.4-12.1-2.7c-2.4-2.4-2.5-5.5-2.7-12.1h-0.3c-0.2,6.6-0.4,9.7-2.7,12.1c-2.4,2.4-5.5,2.5-12.1,2.7v0.3c6.6,0.2,9.7,0.4,12.1,2.7c2.4,2.4,2.5,5.5,2.7,12.1h0.3c0.2-6.6,0.4-9.7,2.7-12.1C21.3,16.5,24.4,16.4,31,16.2" />
+    </symbol>
+    <symbol id="tg" viewBox="0 0 32 32">
+        <path
+          d="M16,1C7.7,1,1,7.7,1,16s6.7,15,15,15c8.3,0,15-6.7,15-15S24.3,1,16,1z M23.4,11.3l-2.5,11.6c-0.2,0.8-0.7,1-1.4,0.6l-3.8-2.8L14,22.5c-0.2,0.2-0.4,0.4-0.8,0.4l0.3-3.8l6.9-6.3c0.3-0.3-0.1-0.4-0.5-0.2L11.4,18l-3.7-1.2c-0.8-0.3-0.8-0.8,0.2-1.2l14.5-5.6C23,9.9,23.6,10.3,23.4,11.3L23.4,11.3z" />
+    </symbol>
 </svg>
